--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@ body {
    font-family: Arial, sans-serif;
 }
 
+
+@media screen and (min-width: 768px){
+   body {
+
+   background: url('assets/bg2.png') no-repeat center center fixed;
+
+}
+}
+
 .container {
    display: flex;
    flex-direction: column;
