--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,21 @@
 body {
    margin: 0;
    padding: 0;
-   background: url('assets/bg.png') no-repeat center center fixed;
+   background: url('assets/bg2.png') no-repeat center center fixed;
    background-size: cover;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
-   font-family: Arial, sans-serif;
+   font-family: 'Lilita One', cursive;
+   color: #4afc65;
 }
 
 
 @media screen and (min-width: 768px){
    body {
 
-   background: url('assets/bg2.png') no-repeat center center fixed;
+   background: url('assets/bg.png') no-repeat center center fixed;
 
 }
 }
@@ -55,7 +56,7 @@ body {
 }
 
 .contract-text {
-   color: #ffffff;
+   /* color: #ffffff; */
    font-size: 16px;
    text-align: center;
    word-break: break-all;
